// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginModal snapshot tests should match the snapshot at OTP input stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-top-container"
      >
        <p
          className="login-modal-header"
        >
          register
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <div
          className="login-modal-input-outer-container"
        >
          <p
            className="login-modal-input-description"
          >
            OTPEnter
          </p>
          <div
            className="login-modal-input-otp-container"
          >
            <input
              maxLength={1}
              pattern="[0-9]"
              type="text"
            />
            <input
              maxLength={1}
              pattern="[0-9]"
              type="text"
            />
            <input
              maxLength={1}
              pattern="[0-9]"
              type="text"
            />
            <input
              maxLength={1}
              pattern="[0-9]"
              type="text"
            />
            <input
              maxLength={1}
              pattern="[0-9]"
              type="text"
            />
            <input
              maxLength={1}
              pattern="[0-9]"
              type="text"
            />
          </div>
          <p
            className="login-modal-input-description login-modal-opaque-text"
          >
            OTPExplanation
          </p>
          <p
            className="login-modal-input-description login-modal-correct-input"
          >
            OTPSendAgain
          </p>
        </div>
      </div>
      <div
        className="login-modal-bottom-container"
      >
        <input
          className="login-modal-button-black-on-green"
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at mail exists stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-top-container"
      >
        <p
          className="login-modal-header"
        >
          register
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <div
          className="login-modal-input-outer-container"
        >
          <p
            className="login-modal-input-help"
          >
            onlyEmail
          </p>
          <div
            className="login-modal-input-inner-container"
          >
            <input
              className="login-modal-input-text"
              data-testid="emailInput"
              onChange={[Function]}
              type="email"
            />
          </div>
          <p
            className="login-modal-wrong-input"
          >
            mailAlreadyExists
          </p>
        </div>
      </div>
      <div
        className="login-modal-bottom-container"
      >
        <input
          className="login-modal-button-green-on-black"
          onClick={[Function]}
          type="button"
          value="accountLogin"
        />
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at mail input stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-top-container"
      >
        <p
          className="login-modal-header"
        >
          register
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <div
          className="login-modal-input-outer-container"
        >
          <p
            className="login-modal-input-help"
          >
            onlyEmail
          </p>
          <div
            className="login-modal-input-inner-container"
          >
            <input
              className="login-modal-input-text"
              data-testid="emailInput"
              onChange={[Function]}
              type="email"
            />
          </div>
        </div>
      </div>
      <div
        className="login-modal-bottom-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at mail not valid stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-top-container"
      >
        <p
          className="login-modal-header"
        >
          register
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <div
          className="login-modal-input-outer-container"
        >
          <p
            className="login-modal-input-help"
          >
            onlyEmail
          </p>
          <div
            className="login-modal-input-inner-container"
          >
            <input
              className="login-modal-input-text"
              data-testid="emailInput"
              onChange={[Function]}
              type="email"
            />
          </div>
          <p
            className="login-modal-wrong-input"
          >
            mailNotValid
          </p>
        </div>
      </div>
      <div
        className="login-modal-bottom-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password input stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-top-container"
      >
        <p
          className="login-modal-header"
        >
          register
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <div
          className="login-modal-input-outer-container"
        >
          <p
            className="login-modal-input-help"
          >
            enterPassword
          </p>
          <div
            className="login-modal-input-inner-container"
          >
            <input
              className="login-modal-input-text"
              data-testid="userPasswordA"
              onChange={[Function]}
              type="password"
            />
          </div>
          <p
            className="login-modal-input-help"
          >
            repeatPassword
          </p>
          <div
            className="login-modal-input-inner-container"
          >
            <input
              className="login-modal-input-text"
              data-testid="userPasswordB"
              onChange={[Function]}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="login-modal-bottom-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password input stage 2`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-top-container"
      >
        <p
          className="login-modal-header"
        >
          entrance
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <div
          className="login-modal-input-outer-container"
        >
          <p
            className="login-modal-input-help"
          >
            onlyEmail
          </p>
          <div
            className="login-modal-input-inner-container"
          >
            <input
              className="login-modal-input-text"
              data-testid="emailInput"
              onChange={[Function]}
              type="email"
              value=""
            />
          </div>
          <p
            className="login-modal-input-help"
          >
            enterPassword
          </p>
          <div
            className="login-modal-input-inner-container"
          >
            <input
              className="login-modal-input-text"
              data-testid="userPasswordLogin"
              onChange={[Function]}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="login-modal-bottom-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password not match stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-top-container"
      >
        <p
          className="login-modal-header"
        >
          register
        </p>
        <p
          className="login-modal-header-description login-modal-opaque-text"
        >
          finikMapProductDescription
        </p>
        <div
          className="login-modal-input-outer-container"
        >
          <p
            className="login-modal-input-help"
          >
            enterPassword
          </p>
          <div
            className="login-modal-input-inner-container login-modal-input-inner-container-wrong-input"
          >
            <input
              className="login-modal-input-text"
              data-testid="userPasswordA"
              onChange={[Function]}
              type="password"
            />
          </div>
          <p
            className="login-modal-input-help"
          >
            repeatPassword
          </p>
          <div
            className="login-modal-input-inner-container login-modal-input-inner-container-wrong-input"
          >
            <input
              className="login-modal-input-text"
              data-testid="userPasswordB"
              onChange={[Function]}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="login-modal-bottom-container"
      >
        <input
          className="login-modal-button-black-on-green"
          onClick={[Function]}
          type="button"
          value="next"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at user welcome stage 1`] = `
<div
  className="login-modal-container"
>
  <div
    className="login-modal"
  >
    <div
      className="login-ellipses-container"
      data-testid="ellipses"
    >
      <div
        className="login-ellipse-left-container"
      >
        <div
          className="login-ellipse login-ellipse-green"
        />
      </div>
      <div
        className="login-ellipse-right-container"
      >
        <div
          className="login-ellipse login-ellipse-blue"
        />
      </div>
    </div>
    <div
      className="login-modal-content-container"
    >
      <div
        className="login-modal-top-container"
      >
        <p
          className="login-modal-header"
        >
          brand
           
          map
        </p>
        <p
          className="login-modal-header-description"
        >
          loginCallToAction
        </p>
      </div>
      <div
        className="login-modal-bottom-container"
      >
        <input
          className="login-modal-button-black-on-green"
          type="button"
          value="accountLogin"
        />
        <input
          className="login-modal-button-green-on-black"
          onClick={[Function]}
          type="button"
          value="accountRegister"
        />
      </div>
    </div>
  </div>
</div>
`;
